Adjust speed, fuel and temperature UI
- Resize speed container
- Resize fuel container
- Resize temperature container
- Temporary hide the vehicle graphics

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 						<!-- Speed (Orange) -->
 						<div id="speed-container">
-							<h5>SPEED <span id="unit-mph" class="unit-description">MPH</span></h5>
+							<h5 id="speed-title">SPEED <span id="unit-mph" class="unit-description">MPH</span></h5>
 							<div id="speed-icon"></div>
 							<div id="speed-gauge-meter"></div>
 							<div id="speed-gauge-units"></div>
@@ -64,7 +64,7 @@
 
 							<!-- Fuel (Yellow) -->
 							<div id="fuel-container">
-								<h5 class="yellow-viv">FUEL <span id="unit-gallons" class="unit-description">GALLONS</span></h5>
+								<h5 id="fuel-title" class="yellow-viv">FUEL <span id="unit-gallons" class="unit-description">GALLONS</span></h5>
 								<div id="fuel-icon"></div>
 								<div id="fuel-gauge-meter"></div>
 								<div id="fuel-gauge-units"></div>
@@ -91,7 +91,7 @@
 					<div id="tire-pressure-container">
 
 						<!-- Front Tires -->
-						<div class="front-tire-data tire-pressure-data left-PSI">
+						<!--<div class="front-tire-data tire-pressure-data left-PSI">
 							<div class="PSI-status-position PSI-status-OK "></div>
 							<h6>Left Front Tire</h6>
 							<p class="psi-text"><span id="psiFL">26.0</span> PSI</p>
@@ -101,10 +101,10 @@
 							<div class="PSI-status-position PSI-status-OK"></div>
 							<h6>Right Front Tire</h6>
 							<p class="psi-text"><span id="psiFR">26.0</span> PSI</p>
-						</div>
+						</div>-->
 
 						<!-- Rear Tires -->
-						<div class="rear-tire-data tire-pressure-data left-PSI">
+						<!--<div class="rear-tire-data tire-pressure-data left-PSI">
 							<div class="PSI-status-position PSI-status-OK "></div>
 							<h6>Left Rear Tire</h6>
 							<p class="psi-text"><span id="psiRL">26.0</span> PSI</p>
@@ -115,10 +115,11 @@
 							<h6>Right Rear Tire</h6>
 							<p class="psi-text"><span id="psiRR">26.0</span> PSI</p>
 						</div>
-					</div>
+					</div>-->
 
 					<!-- 03. Vehicle Graphics -->
-					<div id="vehicle-graphic" class="rangeRoverVehicle"></div> <!-- This is the large vehicle graphic with call out lines -->
+					<!-- This is the large vehicle graphic with call out lines -->
+					<div id="vehicle-graphic" class="rangeRoverVehicle"></div>
 					<div id="vehicle-graphic-switches">
 						<div id="rangeRoverButton"><a class="button button-orange">Range Rover<a></div>
 						<div id="lr4Button"><a class="button button-orange">LR4<a></div>
