Show vehicle graphics
- Rotate vehicle graphics from portait to landscape
- Scale vehicle graphics
- Resize and adjust CSS properties

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div id="tire-pressure-container">
 
 						<!-- Front Tires -->
-						<!--<div class="front-tire-data tire-pressure-data left-PSI">
+						<div class="front-tire-data tire-pressure-data left-PSI">
 							<div class="PSI-status-position PSI-status-OK "></div>
 							<h6>Left Front Tire</h6>
 							<p class="psi-text"><span id="psiFL">26.0</span> PSI</p>
@@ -101,10 +101,10 @@
 							<div class="PSI-status-position PSI-status-OK"></div>
 							<h6>Right Front Tire</h6>
 							<p class="psi-text"><span id="psiFR">26.0</span> PSI</p>
-						</div>-->
+						</div>
 
 						<!-- Rear Tires -->
-						<!--<div class="rear-tire-data tire-pressure-data left-PSI">
+						<div class="rear-tire-data tire-pressure-data left-PSI">
 							<div class="PSI-status-position PSI-status-OK "></div>
 							<h6>Left Rear Tire</h6>
 							<p class="psi-text"><span id="psiRL">26.0</span> PSI</p>
@@ -115,7 +115,7 @@
 							<h6>Right Rear Tire</h6>
 							<p class="psi-text"><span id="psiRR">26.0</span> PSI</p>
 						</div>
-					</div>-->
+					</div>
 
 					<!-- 03. Vehicle Graphics -->
 					<!-- This is the large vehicle graphic with call out lines -->
