Fix top and bottom bar
- Fix HTML elements for top bar
- Fix HTML elements for bottom bar

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 			includeJs("./js/main.js");
 		</script>
 	</head>
-	<body>
-		<!-- Begin  #base -->
-		<div id="base">
-			<div id="topBar"></div>
+	<body data-twttr-rendered="true">
+		<div id="top-bar"></div>
+		<div id="center-panel">
+			<!-- Begin  #app -->
 			<div id="app">
 				<div id="clockElement"></div>
 				<!-- BEGIN HTML ELEMENTS -->
@@ -129,8 +129,8 @@
 				<!-- END CUSTOM ELEMENTS -->
 			</div>
 			<!--end of #app -->
-			<div id="bottomBar" class="bottomPanel bottomPanelImg"></div>
 		</div>
-		<!-- End #base -->
+		<!--end of #center-panel -->
+		<div id="bottom-bar"></div>
 	</body>
 	</html>
