Fix buttons for changing vehicles
Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 					<!-- This is the large vehicle graphic with call out lines -->
 					<div id="vehicle-graphic" class="rangeRoverVehicle"></div>
 					<div id="vehicle-graphic-switches">
-						<div id="rangeRoverButton"><a class="button button-orange">Range Rover<a></div>
-						<div id="lr4Button"><a class="button button-orange">LR4<a></div>
-						<div id="fTypeButton"><a class="button button-orange">F-Type<a></div>
+						<div id="rangeRoverButton"><button class="button-outline button-orange">Range Rover</button></div>
+						<div id="lr4Button"><button class="button-outline button-orange">LR4</button></div>
+						<div id="fTypeButton"><button class="button-outline button-orange">F-Type</button></div>
 					</div>
 				</div>
 				<!-- END CUSTOM ELEMENTS -->
